# python-project-52

./: .coveragerc  .env  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties
.github/workflows/: README.md  sonarcloud.yml
accounts/: urls.py  views.py
accounts/tests/: test_statuses_crud.py  test_users_crud.py
statuses/: forms.py  urls.py  views.py
task_manager/: settings.py  urls.py  views.py
task_manager/accounts/: apps.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_remove_label_slug_alter_label_created_at_and_more.py  0003_alter_label_options_alter_label_created_at.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: confirm_delete.html  form.html  index.html
task_manager/templates/statuses/: confirm_delete.html  form.html  (+1 more)
task_manager/users/: apps.py  forms.py  tests.py  urls.py  utils.py  views.py
tasks/: forms.py  models.py  urls.py  views.py
templates/: base.html  index.html
templates/statuses/: confirm_delete.html  index.html
templates/tasks/: confirm_delete.html  detail.html  form.html  index.html
templates/users/: create.html  update.html
tests/: conftest.py  test_labels_crud.py  test_statuses_crud.py  test_tasks_crud.py  test_users_crud.py
(+12 files in other folders)
