[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "django>=5,<6",
  "python-dotenv",
  "dj-database-url",
  "gunicorn",
  "whitenoise",
  "django-bootstrap5>=25.2",
  "pytest>=8.4.2",
  "pytest-django>=4.11.1",
  "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]