[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "django>=5.2.4",
  "python-dotenv",
  "dj-database-url",
  "gunicorn",
  "django-bootstrap5>=25.2",
  "pytest>=8.4.2",
  "pytest-django>=4.11.1",
  "psycopg2-binary>=2.9.10",
  "django-filter>=25.2",
  "rollbar>=1.3.0",
  "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
